Fixed bug #26723 (domNode::appendChild() changes child node namespace) apply fix to insertBefore and replaceChild